samples/_failures_safe/1761430419_3a7a58_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9f184f4.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_f9f184f4.c:146:5: error: expected declaration or statement at end of input
  146 |     token.value[token_len] = '\0';
      |     ^~~~~
